# consumer-pact-example

./: .coveragerc  .gitattributes  .gitignore  .pylintrc  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  Makefile  README.rst  RELEASING.rst  SECURITY.rst  default.mk  docker-compose.yml  publish-contracts.sh  setup.cfg  setup.py
.github/: dependabot.yml  labeler.yml
.github/workflows/: labeler.yml  lint-code.yaml  test-code.yaml
consumer/: __init__.py  client.py  exceptions.py  models.py  product.py  schemas.py  session.py  utils.py
consumer/entities/: __init__.py  base.py  products.py
consumer/resources/: __init__.py  products.py
requirements/: requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
tests/: __init__.py  conftest.py  factories.py  pact_fixtures.py  test_client.py  test_products_consumer.py  test_utils.py
tests/broker/: README.txt  dhparam.pem  docker-compose.yml  nginx.conf
tests/broker/snippets/: proxy-params.conf  self-signed.conf  ssl-params.conf
tests/broker/ssl/certs/: nginx-selfsigned.crt
tests/broker/ssl/private/: nginx-selfsigned.key
tests/entities/: __init__.py  test_base.py
tests/pacts/: productserviceclient-productservice.json
