# This file is part of the Consumer API example.
#
# Copyright (C) 2023 Serghei Iakovlev <egrep@protonmail.ch>
#
# For the full copyright and license information, please view
# the LICENSE file that was distributed with this source code.

# Project-wide configuration file, can be used for package metadata and other
# tool configurations.

[metadata]
license_files = LICENSE
description_file = README.rst
long_description_content_type = text/x-rst

[tool:pytest]
addopts =
    --verbose
    --doctest-modules
    --durations=25
    --color=no

[pylint.MAIN]
# Use multiple processes to speed up Pylint. Specifying 0 will auto-detect the
# number of processors available to use.
jobs = 0

[pylint.LOGGING]
# The type of string formatting that logging methods do.
# 'old' means using % formatting, 'new' is for '{}' formatting.
logging-format-style = new

[pylint.VARIABLES]
# List of qualified module names which can have objects that can redefine
# builtins.
redefining-builtins-modules=requests.exceptions

[flake8]
# Set the maximum allowed length for a line of code
max-line-length = 79

# Set the maximum allowed cyclomatic complexity for a function or method
max-complexity = 10

# When set to True, this option instructs Flake8 to display a summary of
# warnings and errors grouped by type at the end of its output.
statistics = True

# When set to True, this option causes Flake8 to display the offending line
# of code for each warning or error, providing better context for understanding
# and fixing the issues.
show-source = True

# List of files and directories to exclude from linting
exclude =
    .eggs,
    .git,
    .pytest_cache,
    .venv,
    __pycache__,
    build,
    dist,
    examples

# List of modules to be considered as local
application-import-names =
    consumer,
    tests

# Set the import order style to follow Smarkets' style
import-order-style = smarkets

[coverage:report]
# Set the number of decimal places in coverage percentage
precision = 2

# Show lines that were not executed
show_missing = True

[coverage:html]
# Directory for the HTML format report
directory = htmlcov

[coverage:xml]
# Filename for the XML format report
output = coverage.xml

[coverage:run]
# Enable branch coverage (default: False)
branch = True

# Run tests in parallel (useful when using CI/CD)
parallel = True

# Filename for storing coverage data
data_file = coverage.db

# Omit specified files or directories from the report
omit =
    */.venv/*
    */__pycache__/*
    */site-packages/*
    */tests/*
